# techm3

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  agents.md  architecture.md  docker-compose.yml  documentationaniket.md  memory_autonomous_investigation.md  memory_risk_engine.md  memory_secure_data.md  memoryaniket.md  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
app/: main.py
backend/: .env.example  README.md  requirements.txt
data/: README.md
deployment/: run_https_dev.py
docs/: api-ingestion.md  audit-logging.md  authentication-and-rbac.md  dataset-setup.md  demo-guide.md  encryption-at-rest.md  integration-contracts.md  integration-handoff.md  integration_contract.md  kyc-ingestion.md  phase1-workstreams-A-B.md  privacy-and-data-governance.md  rbac-matrix.md  requirements-traceability.md  secrets-vault.md  security-baseline.md  security-verification.md  technical-walkthrough.md  tls-in-transit.md
examples/: demo_risk_engine.py
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
infrastructure/: README.md
ml/: README.md
risk_engine/: __init__.py  api.py  config.py  data_repository.py  engine.py  governance.py  news_service.py  schemas.py  scoring.py
scripts/: README.md  dev_up.ps1  download_data.py  evaluate.py  verify_llm.py
tests/: _tls_helpers.py  conftest.py  test_api.py  test_api_client.py  test_api_route.py  test_audit.py  test_audit_config.py  test_audit_events.py  test_audit_leakage.py  test_audit_middleware.py  test_audit_request_id.py  test_audit_sink_jsonl.py  test_auth_api.py  test_auth_password_tokens.py  test_contract_adapter.py  test_contracts.py  test_data_loader.py  test_data_quality.py  test_egress.py  test_encryption_envelope.py  test_encryption_keys.py  test_encryption_logging_privacy.py  test_encryption_service.py  test_governance_api.py  test_injection.py  test_llm_agent.py  test_llm_providers.py  test_privacy_classification.py  test_privacy_masking.py  test_privacy_minimization.py  test_real_data.py  test_risk_bridge.py  test_risk_engine.py  test_risk_signal_adapter.py  test_scoring.py  test_secrets_encryption_integration.py  test_secrets_health_regression.py  test_tls_headers_and_proxy.py  (+2 more)
(+318 files in other folders)
